fixed code and added new features

--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,11 @@ ujson
 numpy 
 spacy 
 wandb
-tensorboard 
-tensorflow 
-tensorboardX 
 tqdm 
 urllib3 
 torch 
 torchvision
 transformers
 torchfile
+streamlit
+pytorch-fid
